--- a/game.html
+++ b/game.html
@@ -64,17 +64,8 @@
     ">Paper</button>
 
     <button onclick="
-      const randomNumber = Math.random();
-
-      let computerMove = '';
-
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        computerMove = 'rock';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        computerMove = 'paper';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        computerMove = 'scissors';
-      }
+      pickComputerMove();
+      console.log(pickComputerMove());
 
       let result = '';
 
@@ -89,6 +80,20 @@
       alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
 
-    <script></script>
+    <script>
+      function pickComputerMove() {
+        const randomNumber = Math.random();
+
+        let computerMove = '';
+
+        if (randomNumber >= 0 && randomNumber < 1 / 3) {
+          computerMove = 'rock';
+        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+          computerMove = 'paper';
+        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+          computerMove = 'scissors';
+        }
+      }
+    </script>
   </body>
 </html>
