--- a/game.html
+++ b/game.html
@@ -6,17 +6,7 @@
   <body>
     <p>Rock Paper Scissors</p>
     <button onclick="
-      const randomNumber = Math.random();
-
-      let computerMove = '';
-
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        computerMove = 'rock';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        computerMove = 'paper';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        computerMove = 'scissors';
-      }
+      pickComputerMove();
 
       console.log(computerMove);
 
@@ -29,25 +19,12 @@
       } else if (computerMove === 'scissors') {
         result = 'You win';
       }
-
-      console.log(result);
-
+      
       alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
-
     ">Rock</button>
 
     <button onclick="
-      const randomNumber = Math.random();
-
-      let computerMove = '';
-
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        computerMove = 'rock';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        computerMove = 'paper';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        computerMove = 'scissors';
-      }
+      pickComputerMove();
 
       let result = '';
 
@@ -60,12 +37,10 @@
       }
 
       alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
-
     ">Paper</button>
 
     <button onclick="
       pickComputerMove();
-      console.log(pickComputerMove());
 
       let result = '';
 
@@ -81,11 +56,10 @@
     ">Scissors</button>
 
     <script>
+      let computerMove = '';
       
       function pickComputerMove() {
         const randomNumber = Math.random();
-
-        let computerMove = '';
 
         if (randomNumber >= 0 && randomNumber < 1 / 3) {
           computerMove = 'rock';
