--- a/game.html
+++ b/game.html
@@ -56,6 +56,7 @@
     ">Scissors</button>
 
     <script>
+      //ttttttttttttttttttttttttttttttttttttt
       let computerMove = '';
       
       function pickComputerMove() {
