--- a/game.html
+++ b/game.html
@@ -6,9 +6,7 @@
   <body>
     <p>Rock Paper Scissors</p>
     <button onclick="
-      pickComputerMove();
-
-      console.log(computerMove);
+      const computerMove = pickComputerMove();
 
       let result = '';
 
@@ -24,7 +22,7 @@
     ">Rock</button>
 
     <button onclick="
-      pickComputerMove();
+      const computerMove = pickComputerMove();
 
       let result = '';
 
@@ -40,7 +38,7 @@
     ">Paper</button>
 
     <button onclick="
-      pickComputerMove();
+      const computerMove = pickComputerMove();
 
       let result = '';
 
@@ -56,10 +54,11 @@
     ">Scissors</button>
 
     <script>
-      let computerMove = '';
       
       function pickComputerMove() {
         const randomNumber = Math.random();
+
+        let computerMove = '';
 
         if (randomNumber >= 0 && randomNumber < 1 / 3) {
           computerMove = 'rock';
@@ -68,6 +67,8 @@
         } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
           computerMove = 'scissors';
         }
+
+        return computerMove;
       }
     </script>
   </body>
