--- a/game.html
+++ b/game.html
@@ -12,6 +12,12 @@
 
     
     <script>
+      const score = {
+        wins: 0,
+        losses: 0,
+        ties: 0
+      };
+
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
 
@@ -45,7 +51,17 @@
           }
         }
 
-        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);
+
+        if (result === 'You win') {
+          score.wins = score.wins + 1;
+        } else if (result === 'You lose') {
+          score.losses = score.losses + 1;
+        } else if (result === 'Tie') {
+          score.ties = score.ties + 1;
+        }
+
+        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
+          Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
       }
 
       function pickComputerMove() {
