--- a/game.html
+++ b/game.html
@@ -9,6 +9,12 @@
     <button onclick="playGame('rock');">Rock</button>
     <button onclick="playGame('paper');">Paper</button>
     <button onclick="playGame('scissors');">Scissors</button>
+    
+    <button onclick="
+      score.wins = 0;
+      score.losses = 0;
+      score.ties = 0;
+    ">Reset Score</button>
 
     
     <script>
