--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button onclick="playGame('rock');">Rock</button>
     <button onclick="playGame('paper');">Paper</button>
     <button onclick="playGame('scissors');">Scissors</button>
+    <button>testttttttttttttttttttttttttttttt</button>
 
     <button onclick="
       score.wins = 0;
