--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
   <body>
     <p class="title">Rock Paper Scissors</p>
 
-    <button onclick="playGame('rock');">Rock</button>
-    <button onclick="playGame('paper');">Paper</button>
-    <button onclick="playGame('scissors');">Scissors</button>
+    <button onclick="playGame('rock');" class="move-button">
+      Rock
+      <img src="images/rock-emoji.png" class="move-icon">
+    </button>
+
+    <button onclick="playGame('paper');">
+      Paper
+      <img src="images/paper-emoji.png" class="move-icon">
+    </button>
+    
+    <button onclick="playGame('scissors');">
+      Scissors
+      <img src="images/scissors-emoji.png" class="move-icon">
+    </button>
+
 
     <button onclick="
       score.wins = 0;
