--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <p class="title">Rock Paper Scissors</p>
 
     <button onclick="playGame('rock');" class="move-button">
-      Rock
       <img src="images/rock-emoji.png" class="move-icon">
     </button>
 
-    <button onclick="playGame('paper');">
-      Paper
+    <button onclick="playGame('paper');" class="move-button">
       <img src="images/paper-emoji.png" class="move-icon">
     </button>
     
-    <button onclick="playGame('scissors');">
-      Scissors
+    <button onclick="playGame('scissors');" class="move-button">
       <img src="images/scissors-emoji.png" class="move-icon">
     </button>
 
@@ -27,9 +24,10 @@
       score.wins = 0;
       score.losses = 0;
       score.ties = 0;
-      //alert(`Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
       updateScore();
-    ">Reset Score</button>
+    " class="reset-score-button">
+      Reset Score
+    </button>
 
     <p class="result"></p>
     <p class="move"></p>
